# cradle

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: lint.yml
examples/: simple_model_config.yaml
src/cradle/: main.py
src/cradle_app/: main.py
src/cradle_app/config/: model.py
tests/: test_cradle.py  test_cradle_app.py
